028500e05864c02f65c30ea6c8580a5d8b98f9a1 docs (refs/heads/master)

--- a/usage/index.html
+++ b/usage/index.html
@@ -435,7 +435,7 @@
 <span class="c1"># This command will show up as &quot;meow&quot; in the command menu</span>
 <span class="nd">@doc_parse</span><span class="o">.</span><span class="n">as_slash_command</span><span class="p">()</span>
 <span class="k">async</span> <span class="k">def</span> <span class="nf">meow</span><span class="p">(</span><span class="n">ctx</span><span class="p">:</span> <span class="n">tanjun</span><span class="o">.</span><span class="n">abc</span><span class="o">.</span><span class="n">SlashContext</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Meow command&#39;s description.&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Meow command&#39;s description.&quot;&quot;&quot;</span>
     <span class="o">...</span>
 
 <span class="n">get_group</span> <span class="o">=</span> <span class="n">tanjun</span><span class="o">.</span><span class="n">slash_command_group</span><span class="p">(</span><span class="s2">&quot;get&quot;</span><span class="p">,</span> <span class="s2">&quot;Get command group&quot;</span><span class="p">)</span>
@@ -444,7 +444,7 @@
 <span class="nd">@get_group</span><span class="o">.</span><span class="n">with_command</span>
 <span class="nd">@doc_parse</span><span class="o">.</span><span class="n">as_slash_command</span><span class="p">()</span>
 <span class="k">async</span> <span class="k">def</span> <span class="nf">user</span><span class="p">(</span><span class="n">ctx</span><span class="p">:</span> <span class="n">tanjun</span><span class="o">.</span><span class="n">abc</span><span class="o">.</span><span class="n">SlashContext</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Get a user.&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Get a user.&quot;&quot;&quot;</span>
     <span class="o">...</span>
 </code></pre></div>
 <p><a class="autorefs autorefs-internal" href="../reference/doc_parse/#tanchan.doc_parse.as_slash_command">tanchan.doc_parse.as_slash_command</a> acts as an extension to <a class="autorefs autorefs-external" href="https://tanjun.cursed.solutions/reference/#tanjun.as_slash_command">tanjun.as_slash_command</a>
@@ -464,7 +464,7 @@ as the command's description.</p>
     <span class="n">user</span><span class="p">:</span> <span class="n">annotations</span><span class="o">.</span><span class="n">User</span><span class="p">,</span>
     <span class="n">reason</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">Optional</span><span class="p">[</span><span class="n">annotations</span><span class="o">.</span><span class="n">Length</span><span class="p">[</span><span class="mi">460</span><span class="p">]]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
 <span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Ban a user from this guild.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Ban a user from this guild.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        user: The user to ban from this guild.</span>
@@ -480,7 +480,7 @@ as the command's description.</p>
     <span class="n">member</span><span class="p">:</span> <span class="n">annotations</span><span class="o">.</span><span class="n">Member</span><span class="p">,</span>
     <span class="n">reason</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">Optional</span><span class="p">[</span><span class="n">annotations</span><span class="o">.</span><span class="n">Length</span><span class="p">[</span><span class="mi">460</span><span class="p">]]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
 <span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Kick a member from this guild.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Kick a member from this guild.</span>
 
 <span class="sd">    Parameters</span>
 <span class="sd">    ----------</span>
@@ -499,7 +499,7 @@ as the command's description.</p>
     <span class="n">content</span><span class="p">:</span> <span class="n">annotations</span><span class="o">.</span><span class="n">Str</span><span class="p">,</span>
     <span class="n">channel</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">Optional</span><span class="p">[</span><span class="n">annotations</span><span class="o">.</span><span class="n">Channel</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
 <span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Make the bot echo a message.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Make the bot echo a message.</span>
 
 <span class="sd">    :param content: The message to echo.</span>
 <span class="sd">    :param channel: The channel to echo to.</span>
